kubernetes/platform/development/services/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: polar-redis
    labels:
        db: polar-redis
spec:
    selector:
        matchLabels:
            db: polar-redis
    template:
        metadata:
            labels:
                db: polar-redis
        spec:
            containers:
                -   name: polar-redis
                    image: redis:7.2
                    resources:
                        requests:
                            cpu: 100m
                            memory: 50Mi
                        limits:
                            cpu: 200m
                            memory: 100Mi

---

apiVersion: v1
kind: Service
metadata:
    name: polar-redis
    labels:
        db: polar-redis
spec:
    type: ClusterIP
    selector:
        db: polar-redis
    ports:
        -   protocol: TCP
            port: 6379
            targetPort: 6379
